--- a/asm_loader/Cargo.toml
+++ b/asm_loader/Cargo.toml
@@ -1,14 +1,9 @@
 [package]
-name = "rodal"
+name = "rodal_asm_loader"
 version = "0.0.1"
 authors = [ "Your name <you@example.com>" ]
 include = ["Cargo.toml", "src/**/*.rs"]
-build = "build.rs"
-
-[build-dependencies]
-rustc_version = "0.2.1"
 
 [dependencies]
 libc = "0.2.24"
-num = "0.1.39"
-log = "0.3.5"
+rodal = { version = "0.0.1", path = "../../rodal" }
