--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,12 @@ build = "build.rs"
 
 [build-dependencies]
 rustc_version = "*"
-rodal_alloc = {path = "alloc"}
 
 [dependencies]
 libc = "0.2.24"
 num = "*"
 log = "*"
 field-offset = "*"
+
+[lib]
+crate-type = ["staticlib", "rlib", "dylib"]
