run a rustfmt and do a bit of cleanup
Also pins the library versions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 # Copyright 2017 The Australian National University
-# 
+#
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
-# 
+#
 #     http://www.apache.org/licenses/LICENSE-2.0
-# 
+#
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -17,16 +17,12 @@ name = "rodal"
 version = "0.1.16"
 authors = [ "Your name <you@example.com>" ]
 include = ["Cargo.toml", "src/**/*.rs"]
-build = "build.rs"
-
-[build-dependencies]
-rustc_version = "*"
 
 [dependencies]
-libc = "*"
-num = "*"
-log = "*"
-field-offset = "*"
+libc = "^0.2"
+num = "^0.1"
+log = "^0.4"
+field-offset = "^0.1"
 
 [lib]
 crate-type = ["staticlib", "rlib", "dylib"]
